# QuillPilot

./: .editorconfig  .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
quillpilot/: __init__.py  api.py  bibtex.py  chunking.py  config.py  db.py  hotkeys.py  library.py  llm.py  models.py  pdf.py  search.py  tray.py  user_settings.py
quillpilot/static/: app.js  index.html  styles.css
tests/: test_api.py  test_hotkeys.py  test_library.py  test_tray.py
