[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quillpilot"
version = "0.1.0"
description = "Local editor-agnostic AI copilot for academic writing with PDF/BibTeX knowledge base support."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "QuillPilot" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["academic-writing", "latex", "bibtex", "copilot", "fastapi", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
  "bibtexparser>=1.4.1",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "PyMuPDF>=1.24.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
desktop = [
  "keyboard>=0.13.5",
  "pyperclip>=1.9.0",
  "pystray>=0.19.5",
  "pillow>=10.0.0",
]
vector = ["chromadb>=0.5.0"]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "reportlab>=4.0.0",
]

[project.scripts]
quillpilot-api = "quillpilot.api:run"
quillpilot-hotkeys = "quillpilot.hotkeys:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quillpilot*"]

[tool.setuptools.package-data]
quillpilot = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
